; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-import-dump.c_log_1int.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-import-dump.c_log_1int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_generic = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_1int(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.lev_generic*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = call %struct.lev_generic* @write_alloc(i32 8)
  store %struct.lev_generic* %6, %struct.lev_generic** %5, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load %struct.lev_generic*, %struct.lev_generic** %5, align 8
  %9 = getelementptr inbounds %struct.lev_generic, %struct.lev_generic* %8, i32 0, i32 0
  store i64 %7, i64* %9, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load %struct.lev_generic*, %struct.lev_generic** %5, align 8
  %12 = getelementptr inbounds %struct.lev_generic, %struct.lev_generic* %11, i32 0, i32 1
  store i64 %10, i64* %12, align 8
  ret void
}

declare dso_local %struct.lev_generic* @write_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
